--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.1",
+    "@thirdweb-dev/react": "^3.9.1",
+    "@thirdweb-dev/sdk": "^3.9.1",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "classnames": "^2.3.2",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "ethers": "^5.7.2",
     "lucide-react": "^0.115.0",
     "next": "13.1.6",
     "react": "18.2.0",
