--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-tooltip": "^1.0.3",
     "@thirdweb-dev/react": "^3.9.1",
     "@thirdweb-dev/sdk": "^3.9.1",
     "@types/node": "18.14.0",
